# data-quality-engine

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
dqe/: __init__.py  __main__.py  cli.py  engine.py  profiling.py  report.py  scoring.py  types.py
dqe/checks/: __init__.py  base.py  completeness.py  freshness.py  outliers.py  schema.py  uniqueness.py  validity.py
dqe/connectors/: __init__.py  api_connector.py  base.py  file_connectors.py  sql_connector.py
dqe/templates/: report.html.j2
examples/: generate_sample_data.py
tests/: test_checks.py
